introduction getting ready 1

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,2 +1,4 @@
 \acrodef{F/LOSS}{free/libre/open source software}
 \acrodef{OSS}{Open Source Software}
+\acrodef{RCA}{Relational Covariate Adjustment}
+\acrodef{PR}{pull request}
