--- a/dt_references.bib
+++ b/dt_references.bib
@@ -260,4 +260,15 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {diversity, gender, github, open source, productivity},
-} 
+}
+
+@INPROCEEDINGS{vasilescu:2012:6542459,
+author={B. Vasilescu and A. Capiluppi and A. Serebrenik},
+booktitle={Social Informatics (SocialInformatics), 2012 International Conference on},
+title={Gender, Representation and Online Participation: A Quantitative Study of StackOverflow},
+year={2012},
+pages={332-338},
+keywords={gender issues;social networking (online);European Commission;Q&A Website;StackOverflow;gender;international initiatives;online participation;peer community members;social meeting Web-spaces;unfriendly online communities;women},
+doi={10.1109/SocialInformatics.2012.81},
+month={Dec},
+}
