--- a/DT_Seminar_Paper.tex
+++ b/DT_Seminar_Paper.tex
@@ -2,7 +2,7 @@
 
 \begin{document}% max 10 pages,
 
-\title{TO BE DETERMINED}
+\title{Effects of Gender on Contribution Evaluation on Github}
 
 \author{
 	\IEEEauthorblockN{Pascal Brokmeier (B.Sc.)}
