state pre email request to angular team

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,4 +1,10 @@
 \acrodef{F/LOSS}{free/libre/open source software}
+\acrodef{FLOSSPOLS}{Free/Libre and Open Source Policy Support}
 \acrodef{OSS}{Open Source Software}
+\acrodef{RDBMS}{Relational Database Management System}
+\acrodef{JSON}{JavaScript Object Notation}
+\acrodef{JS}{JavaScript}
+\acrodef{API}{Application Programming Interface}
+\acrodef{csv}{comma separated values}
 \acrodef{RCA}{Relational Covariate Adjustment}
 \acrodef{PR}{pull request}
