--- a/dt_references.bib
+++ b/dt_references.bib
@@ -126,6 +126,50 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2675133.2675284},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2675133.2675284}}
 
+	@article{10.2307/23443867,
+	 ISSN = {00251909, 15265501},
+	 URL = {http://www.jstor.org/stable/23443867},
+	 abstract = {This paper reports on a field experiment conducted to estimate the impact of the share of women in business teams on their performance. Teams consisting of undergraduate students in business studies start up a venture as part of their curriculum. We manipulated the gender composition of teams and assigned students randomly to teams, conditional on their gender. We find that teams with an equal gender mix perform better than male-dominated teams in terms of sales and profits. We explore various mechanisms suggested in the literature to explain this positive effect of gender diversity on performance (including complementarities, learning, monitoring, and conflicts) but find no support for them.},
+	 author = {Sander Hoogendoorn and Hessel Oosterbeek and Mirjam van Praag},
+	 journal = {Management Science},
+	 number = {7},
+	 pages = {1514-1528},
+	 publisher = {INFORMS},
+	 title = {The Impact of Gender Diversity on the Performance of Business Teams: Evidence from a Field Experiment},
+	 volume = {59},
+	 year = {2013}
+	}
+
+
+
+
+
+
+
+	@article{doi:10.1287/orsc.7.1.1,
+	author = {Laurie J. Kirsch},
+	title = {The Management of Complex Tasks in Organizations: Controlling the Systems Development Process},
+	journal = {Organization Science},
+	volume = {7},
+	number = {1},
+	pages = {1-21},
+	year = {1996},
+	doi = {10.1287/orsc.7.1.1},
+
+	URL = {
+	        http://dx.doi.org/10.1287/orsc.7.1.1
+
+	},
+	eprint = {
+	        http://dx.doi.org/10.1287/orsc.7.1.1
+
+	}
+	,
+	    abstract = { Control theory attempts to explain how one person or group in an organization can ensure that another person or group works toward and attains a set of organizational goals. Prior empirical work investigating control theory has shown that characteristics of the task and of the organizational environment predict the use of various types of control. However, this paper argues that when control theory is applied to a complex, nonroutine task such as the management of information systems development, the theory of control is incomplete. In particular, it proposes that knowledge of the task is a key determinant of type of control. Four modes of control (behavior, outcome, clan, and self) art identified from the organizational literature; each high-lights different aspects of control in organizations. Building on prior empirical work, this paper integrates the different theoretical perspectives and predicts the circumstances under which each type of control will be implemented. Survey responses from 96 participants of 32 systems development efforts suggest that the extent to which behaviors are monitored interacts with the project sponsor's level of systems development knowledge to determine the amount of behavior control; that outcome control is a function of the extent to which behaviors are monitored and outcomes are measurable; and that self-control is dependent on the extent to which outcomes are measurable and the level of the project sponsor's knowledge about systems development activities. No relationship between clan control and the independent variables was found. }
+	}
+
+
+
 @inproceedings{McDonald:2013:PPO:2468356.2468382,
 	Acmid = {2468382},
 	Address = {New York, NY, USA},
@@ -271,4 +315,252 @@ pages={332-338},
 keywords={gender issues;social networking (online);European Commission;Q&A Website;StackOverflow;gender;international initiatives;online participation;peer community members;social meeting Web-spaces;unfriendly online communities;women},
 doi={10.1109/SocialInformatics.2012.81},
 month={Dec},
+}
+
+@article{genderdiff:2016,
+author={Josh Terrell and Andrew Kofink and Justin Middleton and Clarissa Rainear and Emerson Murphy-Hill and Chris Parnin and Jon Stallings},
+title={Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men},
+year={2016}
+}
+
+
+
+
+
+
+@article{doi:10.1287/mnsc.2014.1998,
+author = {David Newton and Mikhail Simutin},
+title = {Of Age, Sex, and Money: Insights from Corporate Officer Compensation on the Wage Inequality Between Genders},
+journal = {Management Science},
+volume = {61},
+number = {10},
+pages = {2355-2375},
+year = {2015},
+doi = {10.1287/mnsc.2014.1998},
+
+URL = {
+        http://dx.doi.org/10.1287/mnsc.2014.1998
+
+},
+eprint = {
+        http://dx.doi.org/10.1287/mnsc.2014.1998
+
+}
+,
+    abstract = { This paper shows that the gender and age of the wage setter are crucial determinants of the disparity in wages between sexes. We document our findings using a data set on compensation of corporate officers that is uniquely suited for this analysis because officer wages are set by chief executive officers (CEOs). We show that CEOs pay officers of the opposite gender less than officers of their own gender, even when controlling for job characteristics. Older and male CEOs exhibit the greatest propensity to differentiate on the basis of sex. Female officers receive smaller raises if the firm is headed by a man. Our results suggest that CEO gender and age are economically more important determinants of officer compensation than are firm stock performance, stock volatility, or return on assets. This paper was accepted by Uri Gneezy, behavioral economics. }
+}
+
+
+
+
+
+
+@article{doi:10.1287/mnsc.1110.1348,
+author = {Jose Apesteguia and Ghazala Azmat and Nagore Iriberri},
+title = {The Impact of Gender Composition on Team Performance and Decision Making: Evidence from the Field},
+journal = {Management Science},
+volume = {58},
+number = {1},
+pages = {78-93},
+year = {2012},
+doi = {10.1287/mnsc.1110.1348},
+
+URL = {
+        http://dx.doi.org/10.1287/mnsc.1110.1348
+
+},
+eprint = {
+        http://dx.doi.org/10.1287/mnsc.1110.1348
+
+}
+,
+    abstract = { We investigate whether the gender composition of teams affects their economic performance. We study a large business game, played in groups of three, in which each group takes the role of a general manager. There are two parallel competitions, one involving undergraduates and the other involving MBA students. Our analysis shows that teams formed by three women are significantly outperformed by all other gender combinations, both at the undergraduate and MBA levels. Looking across the performance distribution, we find that for undergraduates, three-women teams are outperformed throughout, but by as much as 0.47 of a standard deviation of the mean at the bottom and by only 0.09 at the top. For MBA students, at the top, the best performing group is two men and one woman. The differences in performance are explained by differences in decision making. We observe that three-women teams are less aggressive in their pricing strategies, invest less in research and development, and invest more in social sustainability initiatives than does any other gender combination. This paper was accepted by Brad Barber, Teck Ho, and Terrance Odean, special issue editors. }
+}
+
+
+
+
+
+
+@article{doi:10.1287/mnsc.1110.1452,
+author = {Renée B. Adams and Patricia Funk},
+title = {Beyond the Glass Ceiling: Does Gender Matter?},
+journal = {Management Science},
+volume = {58},
+number = {2},
+pages = {219-235},
+year = {2012},
+doi = {10.1287/mnsc.1110.1452},
+
+URL = {
+        http://dx.doi.org/10.1287/mnsc.1110.1452
+
+},
+eprint = {
+        http://dx.doi.org/10.1287/mnsc.1110.1452
+
+}
+,
+    abstract = { A large literature documents that women are different from men in their choices and preferences, but little is known about gender differences in the boardroom. If women must be like men to break the glass ceiling, we might expect gender differences to disappear among directors. Using a large survey of directors, we show that female and male directors differ systematically in their core values and risk attitudes, but in ways that differ from gender differences in the general population. These results are robust to controlling for differences in observable characteristics. Consistent with findings for the population, female directors are more benevolent and universally concerned but less power oriented than male directors. However, in contrast to findings for the population, they are less tradition and security oriented than their male counterparts. They are also more risk loving than male directors. Thus, having a woman on the board need not lead to more risk-averse decision making. This paper was accepted by Brad Barber, Teck Ho, and Terrance Odean, special issue editors. }
+}
+
+
+
+
+
+
+@article{doi:10.1287/mnsc.2015.2315,
+author = {Isabel Fernandez-Mateo and Roberto M. Fernandez},
+title = {Bending the Pipeline? Executive Search and Gender Inequality in Hiring for Top Management Jobs},
+journal = {Management Science},
+volume = {62},
+number = {12},
+pages = {3636-3655},
+year = {2016},
+doi = {10.1287/mnsc.2015.2315},
+
+URL = {
+        http://dx.doi.org/10.1287/mnsc.2015.2315
+
+},
+eprint = {
+        http://dx.doi.org/10.1287/mnsc.2015.2315
+
+}
+,
+    abstract = { We study the sources of women’s underrepresentation in hiring for top management jobs by focusing on the context of executive search. Using data that include proprietary information on 10,970 individuals considered by a search firm, we examine the sources of the low proportion of women placed in senior roles. Contrary to received wisdom, we find limited evidence that demand-side screeners strongly contribute to gender disadvantage in this setting. What gender differences exist tend to play out at the start of the hiring process and are driven both by supply-side and demand-side actors. Once considered for a position, women are no less likely than men to be hired—though they are slightly less likely to be interviewed by the search firm. Our findings highlight the theoretical importance of disentangling candidates’ “self-steering” behavior from the “pipeline bending” of hiring agents. We discuss the implications of our results for understanding gender inequality at upper echelons of the labor market. This paper was accepted by Olav Sorenson, organizations. }
+
+}
+
+@article{8814207420130601,
+Abstract = {Diversity is a defining characteristic of global collectives facilitated by the Internet. Though substantial evidence suggests that diversity has profound implications for a variety of outcomes including performance, member engagement, and withdrawal behavior, the effects of diversity have been predominantly investigated in the context of organizational workgroups or virtual teams. We use a diversity lens to study the success of nontraditional virtual work groups exemplified by open source software (OSS) projects. Building on the diversity literature, we propose that three types of diversity (separation, variety, and disparity) influence two critical outcomes for OSS projects: community engagement and market success. We draw on the OSS literature to further suggest that the effects of diversity on market success are moderated by the application development stage. We instantiate the operational definitions of three forms of diversity to the unique context of open source projects. Using},
+Author = {Daniel, Sherae and Agarwal, Ritu and Stewart, Katherine J.},
+ISSN = {10477047},
+Journal = {Information Systems Research},
+Keywords = {Open source software, Virtual work teams, Virtual work, Diversity in the workplace, Oral communication, diversity, global collectives, open source software},
+Number = {2},
+Pages = {312 - 333},
+Title = {The Effects of Diversity in Global, Distributed Collectives: A Study of Open Source Project Success.},
+Volume = {24},
+URL = {http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=88142074&site=ehost-live},
+Year = {2013},
+}
+
+@misc{googleplusstats:2015
+    url ="http://www.techtimes.com/articles/51205/20150506/many-users-google-really.htm",
+	year = "2015",
+	title = "How Many Users Does Google+ Really Have?",
+	author = "Fergal Gallagher",
+	Date-Added = {2017-01-20 13:43:29 +0000},
+	Date-Modified = {2017-01-20 13:43:29 +0000},
+	Lastchecked = {2017-01-20 13:43:29 +0000}
+}
+
+@misc{facebookstats:2017
+    url ="http://newsroom.fb.com/company-info/",
+	year = "2017",
+	Date-Added = {2017-01-20 13:43:29 +0000},
+	Date-Modified = {2017-01-20 13:43:29 +0000},
+	Lastchecked = {2017-01-20 13:43:29 +0000}
+}
+
+@ARTICLE {chi2016springer,
+    author = "Reiner Hellbrück",
+    title  = "Angewandte Statistik mit R",
+    year   = "2016",
+	publisher = "Springer"
+}
+
+
+
+@article{doi:10.1287/mnsc.1060.0550,
+author = {Rajdeep Grewal and Gary L. Lilien and Girish Mallapragada},
+title = {Location, Location, Location: How Network Embeddedness Affects Project Success in Open Source Systems},
+journal = {Management Science},
+volume = {52},
+number = {7},
+pages = {1043-1056},
+year = {2006},
+doi = {10.1287/mnsc.1060.0550},
+
+URL = {
+        http://dx.doi.org/10.1287/mnsc.1060.0550
+
+},
+eprint = {
+        http://dx.doi.org/10.1287/mnsc.1060.0550
+
+}
+,
+    abstract = { The community-based model for software development in open source environments is becoming a viable alternative to traditional firm-based models. To better understand the workings of open source environments, we examine the effects of network embeddedness—or the nature of the relationship among projects and developers—on the success of open source projects. We find that considerable heterogeneity exists in the network embeddedness of open source projects and project managers. We use a visual representation of the affiliation network of projects and developers as well as a formal statistical analysis to demonstrate this heterogeneity and to investigate how these structures differ across projects and project managers. Our main results surround the effect of this differential network embeddedness on project success. We find that network embeddedness has strong and significant effects on both technical and commercial success, but that those effects are quite complex. We use latent class regression analysis to show that multiple regimes exist and that some of the effects of network embeddedness are positive under some regimes and negative under others. We use project age and number of page views to provide insights into the direction of the effect of network embeddedness on project success. Our findings show that different aspects of network embeddedness have powerful but subtle effects on project success and suggest that this is a rich environment for further study. }
+}
+@INPROCEEDINGS{perils-github:2015,
+    author = {Eirini Kalliamvakou and Georgios Gousios and Kelly Blincoe and Leif Singer and Daniel M. German and Daniela Damian},
+    title = {The promises and perils of mining GitHub},
+    booktitle = {in MSR. ACM},
+    year = {},
+    pages = {92--101}
+}
+
+
+
+
+
+
+@article{doi:10.1177/0149206310374774,
+author = {Philip L. Roth and Kristen L. Purvis and Philip Bobko},
+title = {A Meta-Analysis of Gender Group Differences for Measures of Job Performance in Field Studies},
+journal = {Journal of Management},
+volume = {38},
+number = {2},
+pages = {719-739},
+year = {2012},
+doi = {10.1177/0149206310374774},
+
+URL = {
+        http://dx.doi.org/10.1177/0149206310374774
+
+},
+eprint = {
+        http://dx.doi.org/10.1177/0149206310374774
+
+}
+,
+    abstract = { There are multiple views in human resource management and organizational behavior concerning gender differences in measures of job performance. Some researchers suggest that males generally are evaluated higher than females across a variety of situations that include job performance measurement. At the same time, the presence of specific status cues in expectation states theory (EST; similar to the concept of individuating information) suggests that measures of job performance will be more similar than different for males and females. Previous analyses are unclear in their results for the measurement of the construct of job performance because they have included, and/or focused on, additional constructs (e.g., hiring suitability, leadership performance aggregated with leadership satisfaction) or have used student samples in lab experiments. The authors of this article conducted a meta-analysis of job performance measures from field studies. They found that females generally scored slightly higher than males (mean d = −.11, 80\% credibility interval of −.33 to .12). Other analyses suggested that, although job performance ratings favored females, ratings of promotion potential were higher for males. Thus, ratings of promotability may deserve further attention as a potential source of differential promotion rates. These findings and processes are discussed within the context of EST. }
+}
+
+
+
+@article{Davison2000225,
+title = "Sex Discrimination in Simulated Employment Contexts: A Meta-analytic Investigation ",
+journal = "Journal of Vocational Behavior ",
+volume = "56",
+number = "2",
+pages = "225 - 248",
+year = "2000",
+note = "",
+issn = "0001-8791",
+doi = "http://dx.doi.org/10.1006/jvbe.1999.1711",
+url = "//www.sciencedirect.com/science/article/pii/S0001879199917116",
+author = "Heather K. Davison and Michael J. Burke"
+}
+
+
+
+@inproceedings{perils-ms-research:2009,
+author = {Christian Bird and Peter C. Rigby and Earl T. Barr and David Hamilton and Daniel M. German and Prem Devanbu},
+title = {The Promises and Perils of Mining Git},
+booktitle = {Proceedings of the Sixth Working Conference on Mining Software Repositories},
+year = {2009},
+month = {May},
+abstract = {We are now witnessing the rapid growth of decentralized source code management (DSCM) systems, in which every developer has her own repository. DSCMs facilitate a style of collaboration in which work output can flow sideways (and privately) between collaborators, rather than always up and down (and publicly) via a central repository. Decentralization comes with both the promise of new data and the peril of its misinterpretation. We focus on git, a very popular DSCM used in high-profile projects. Decentralization, and other features of git, such as automatically recorded contributor attribution, lead to richer content histories, giving rise to new questions such as "How do contributions flow between developers to the official project repository?" However, there are pitfalls. Commits may be reordered, deleted, or edited as they move between repositories. The semantics of terms common to SCMs and DSCMs sometimes differ markedly, potentially creating confusion. For example, a commit is immediately visible to all developers in centralized SCMs, but not in DSCMs. Our goal is to help researchers interested in DSCMs avoid these and other perils when mining and analyzing git data.
+},
+publisher = {IEEE Computer Society},
+url = {https://www.microsoft.com/en-us/research/publication/the-promises-and-perils-of-mining-git/},
+address = {Washington, DC, USA},
+pages = {},
+journal = {},
+volume = {},
+chapter = {},
+isbn = {},
 }
