--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,6 @@
 \documentclass[10pt, conference, compsoc]{IEEEtran}
+%\documentclass[12pt]{article}
+%\linespread{1.5}
 %bibliography style
 \usepackage[numbers]{natbib}
 
@@ -7,7 +9,7 @@
 
 % PDF figures
 \usepackage[pdftex]{graphicx}
-\DeclareGraphicsExtensions{.pdf}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg,.jpeg,.PNG,.JPG,.JPEG}
 
 % additional packages
 \usepackage{url}
