moved sections around

--- a/dt_references.bib
+++ b/dt_references.bib
@@ -320,7 +320,9 @@ month={Dec},
 @article{genderdiff:2016,
 author={Josh Terrell and Andrew Kofink and Justin Middleton and Clarissa Rainear and Emerson Murphy-Hill and Chris Parnin and Jon Stallings},
 title={Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men},
-year={2016}
+year={2016},
+note="In peer-review process",
+url=''
 }
 
 
@@ -446,7 +448,7 @@ URL = {http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=88142074&sit
 Year = {2013},
 }
 
-@misc{googleplusstats:2015
+@misc{googleplusstats:2015,
     url ="http://www.techtimes.com/articles/51205/20150506/many-users-google-really.htm",
 	year = "2015",
 	title = "How Many Users Does Google+ Really Have?",
@@ -456,7 +458,7 @@ Year = {2013},
 	Lastchecked = {2017-01-20 13:43:29 +0000}
 }
 
-@misc{facebookstats:2017
+@misc{facebookstats:2017,
     url ="http://newsroom.fb.com/company-info/",
 	year = "2017",
 	Date-Added = {2017-01-20 13:43:29 +0000},
