--- a/header.tex
+++ b/header.tex
@@ -1,6 +1,9 @@
-\documentclass[10pt, conference, compsoc]{IEEEtran}
-%\documentclass[12pt]{article}
+\documentclass[journal, compsoc]{IEEEtran}
+%\documentclass[12pt, journal, compsoc,onecolumn]{IEEEtran}
 %\linespread{1.5}
+
+%\documentclass[12pt]{article}
+
 %bibliography style
 \usepackage[numbers]{natbib}
 
