--- a/DT_Seminar_Paper.tex
+++ b/DT_Seminar_Paper.tex
@@ -2,11 +2,11 @@
 
 \begin{document}% max 10 pages,
 
-\title{Project Level Effects of Gender on Contribution Evaluation on Github}
+\title{Project Level Effects of Gender on Contribution Evaluation on GitHub}
 
 \author{
-	\IEEEauthorblockN{Pascal Brokmeier (B.Sc.)}
-	\IEEEauthorblockA{Universität zu Köln, Germany}
+	\IEEEauthorblockN{Pascal Brokmeier (B.Sc.)}\\
+	\IEEEauthorblockA{Universität zu Köln, Germany}\\
 	\IEEEauthorblockA{pbrokmei@smail.uni-koeln.de}
 	}
 
@@ -14,7 +14,7 @@
 
 \begin{abstract}% max 150 words
 
-Distributed open source software development has largely turned to GitHub, a pull-based software development collaboration platform. Recent studies have deployed data science techniques on the large datasets available about millions of projects on Github. Some research has focused on \ac{PR} acceptance predictors and some evidence was found of sexual discrimination among members, more specifically in the probability of acceptance of pull requests by different genders. In this paper we analyzed the influence of gender on \ac{PR} acceptance on a project level, comparing different popular projects regarding their discrimination factors. Several projects were identified that have significant differences between male and female \ac{PR} acceptance rates.
+Distributed open source software development has largely turned to GitHub, a pull-based software development collaboration platform. Recent studies have deployed data science techniques on the large datasets available about millions of projects on GitHub. Some research has focused on \ac{PR} acceptance predictors and some evidence was found of sexual discrimination among members, more specifically in the probability of acceptance of \ac{PR}s by different genders. In this paper we analyzed the influence of gender on \ac{PR} acceptance on a project level, comparing different popular projects regarding their discrimination factors. Several projects were identified that have significant differences between male and female \ac{PR} acceptance rates.
 \end{abstract}
 
 %\begin{IEEEkeywords}
@@ -23,37 +23,37 @@ Distributed open source software development has largely turned to GitHub, a pul
 
 \section{Introduction}\label{Introduction}
 
-\subsection{Background}%TODO delete
-\IEEEPARstart{S}{oftware} development has adapted to the needs for distributed development through the concepts of social coding and pull based software development pushed by platforms like Github which provide a platform for some of the biggest \ac{OSS} projects existing. Projects like rails, docker, angular, node or swift are publicly hosted with some of them having thousands of followers and contributors. Open Source software development has been described as meritocracies \cite{Scacchi:2007:FSS:1295014.1295019}, however recent research has identified social factors to influence decisions of project managers. This holds also true for the acceptance of contributions by others through \ac{PR}s. \cite{Tsay:2014:IST:2568225.2568315}. Inevitably, a social coding environment such as GitHub is accompanied with social interaction that influences the project progress.
+%\subsection{Background}%TODO delete
+\IEEEPARstart{S}{oftware} development has adapted to the needs for distributed development through the concepts of social coding and pull based software development pushed by platforms like GitHub which provide a platform for some of the biggest \ac{OSS} projects existing. Projects like rails, docker, angular, node or swift are publicly hosted with some of them having thousands of followers and contributors. Open Source software development has been described as meritocracies \cite{Scacchi:2007:FSS:1295014.1295019}, however recent research has identified social factors to influence decisions of project managers. This holds also true for the acceptance of contributions by others through \ac{PR}s. \cite{Tsay:2014:IST:2568225.2568315}. Inevitably, a social coding environment such as GitHub is accompanied with social interaction that influences the project progress.
 
-\subsection{Motivation}%TODO delete
+%\subsection{Motivation}%TODO delete
 An obvious factor in social interaction is gender. Research has shown that women are being treated unequal in professional environments, receive promotions less likely than men and are less likely to be hired when compared to male competition \cite{Davison2000225, doi:10.1177/0149206310374774}.
-and more specifically \ac{OSS} projects have been shown to exhibit sexist behavior. About 1.5\% of the total number of members in communities of \emph{'\ac{F/LOSS}'} were determined to be female compared to 28\% in proprietary software as determined in a 2005 report by the University of Cambridge \cite{flosspols-gender:2005}. More current research shows a percentage of about 9\% female users on Github \cite{Vasilescu:2015:GTD:2702123.2702549}.
+and more specifically \ac{OSS} projects have been shown to exhibit sexist behavior. About 1.5\% of the total number of members in communities of \emph{'\ac{F/LOSS}'} were determined to be female compared to 28\% in proprietary software as determined in a 2005 report by the University of Cambridge \cite{flosspols-gender:2005}. More current research shows a percentage of about 9\% female users on GitHub \cite{Vasilescu:2015:GTD:2702123.2702549}.
 
 \citeauthor{10.2307/23443867} found equal gender mix teams to perform better than male or female dominated teams in the context of business students. Increased mutual monitoring, a form of informal Clan Control \cite{doi:10.1287/orsc.7.1.1}, was found to be a strong beneficial factor in mixed gender teams.
 
 \citeauthor{Vasilescu:2015:GTD:2702123.2702549} more specifically found gender diversity to have beneficial effects on \ac{OSS} team performance. This creates an economic incentive for organizations to promote diversity in their teams and communities.
 
-\citeauthor{Tsay:2014:IST:2568225.2568315} found project managers to use social cues to evaluate contributions and \citeauthor{Vasilescu:2015:GTD:2702123.2702549} found almost half of the project members to be aware of other users gender. Consequently the effect of the perceived gender on this contribution process can be of interest in the ongoing debate of gender inequality. Current research performed by \citeauthor{genderdiff:2016} has identified a significant difference between the acceptance rate of pull requests created by men and women. Women whose profile publicly display their gender have a 4.1\% lower chance of their \ac{PR} being accepted compared to mens and a 10\% lower chance than those women that did not disclose their gender. This is especially interesting as this percentage only holds true for 'visible'
+\citeauthor{Tsay:2014:IST:2568225.2568315} found project managers to use social cues to evaluate contributions and \citeauthor{Vasilescu:2015:GTD:2702123.2702549} found almost half of the project members to be aware of other users gender. Consequently the effect of the perceived gender on this contribution process can be of interest in the ongoing debate of gender inequality. Current research performed by \citeauthor{genderdiff:2016} has identified a significant difference between the acceptance rate of \ac{PR}quests created by men and women. Women whose profile publicly display their gender have a 4.1\% lower chance of their \ac{PR} being accepted compared to mens and a 10\% lower chance than those women that did not disclose their gender. This is especially interesting as this percentage only holds true for 'visible'
 %TODO all ' " "'
 women. Those that decided to withhold information about their gender in their profile have a higher chance of having their request accepted.
 
 
 In their research, \citeauthor{genderdiff:2016} have analyzed a variety of different topology factors on the dataset. They have analyzed their results for different biases most notably an extensive covariate analysis which showed no explanations for the bias towards men. They also analyzed different programming languages and their relation to the acceptance rates. They however did not compare gender-dependent acceptance rates on a project level, allowing project specific environment and culture to explain the discovered differences.
 
-\subsection{Research Question}%TODO delete
-These factors, the underrepresentation of women on Github, the observed sexist behavior within \ac{OSS} communities as well as the social influences on decisions that were believed to be purely lead by meritocratic reasoning raise the following question:%two questions:
+%\subsection{Research Question}%TODO delete
+These factors, the underrepresentation of women on GitHub, the observed sexist behavior within \ac{OSS} communities as well as the social influences on decisions that were believed to be purely lead by meritocratic reasoning raise the following question:%two questions:
 
-\emph{Can project level differences in acceptance rates of \ac{PR}s between genders be observed on Github?}
+\emph{Can project level differences in acceptance rates of \ac{PR}s between genders be observed on GitHub?}
 %\emph{What factors can explain these differences?}
 %TODO Nils: Too generic. focus on specific factors. what project specific factors do I want to focus on?
-%\emph{How does the perceived gender affect the evaluation of contributions by members in a public social coding environment such as Github?}
+%\emph{How does the perceived gender affect the evaluation of contributions by members in a public social coding environment such as GitHub?}
 
 %If significant differences on a project level can be observed, the obvious next question is what factors might cause these differences.
 
 %Method, process explaination
-\subsection{Research Method}
-To answer the research question and due to the large amount of data accessible, data analytics techniques need to be applied. To ensure sufficient data is available per project, the biggest 100 projects on Github are selected
+%\subsection{Research Method}
+To answer the research question and due to the large amount of data accessible, data analytics techniques need to be applied. To ensure sufficient data is available per project, the biggest 100 projects on GitHub are selected
 \footnote{the projects were sorted based on their stars which is a good proxy for their popularity and therefore their community size}.
 
 This paper quantitatively analyzes differences of gender participation between projects. It does not try to determine the relevance of gender in comparison to other social cues in the process of deciding whether to merge or decline a \ac{PR}. Instead, this work is looking for project level differences in gender dependent \ac{PR} statistics. %evaluate if I also do the qualitative part or only the quantitative part.
@@ -70,14 +70,14 @@ The structure of the paper is as follows: First, some background on gender inequ
 
 %The first two tasks need to be resolved using proper technical analysis of the data and using data such as followers as proxies for social standing and network embeddedness. The last task is reliant on the results of the first two as well as the methods available to us to achieve causal identification such as \ac{RCA}. While a simple correlation would already be of interest, discovering a causal effect would be more satisfying.
 
-%To analyze the data, the GHTorrent \cite{Gousi13} dataset is used, which allows the execution of queries against a huge dataset of all repositories, users, \ac{PR}s, comments and issues on Github since 2013. The dataset included over 14 million users and 13 million pull requests in November 2016 although the number of relevant users is expected to be much lower since the distribution of active users is a long tail distribution with very few active users and many inactive or abandoned accounts. Nonetheless, the scale of the dataset allows for thorough data preprocessing without loosing too many potential entries for the analysis afterwards.
+%To analyze the data, the GHTorrent \cite{Gousi13} dataset is used, which allows the execution of queries against a huge dataset of all repositories, users, \ac{PR}s, comments and issues on GitHub since 2013. The dataset included over 14 million users and 13 million \ac{PR}s in November 2016 although the number of relevant users is expected to be much lower since the distribution of active users is a long tail distribution with very few active users and many inactive or abandoned accounts. Nonetheless, the scale of the dataset allows for thorough data preprocessing without loosing too many potential entries for the analysis afterwards.
 
 
 %TODO do I do merge analysis on commit level or not?
 %Since \ac{PR} are hard to determine as either merged or not merged however, this information will have to be resolved by investigating the repositories commit history and comparing the commit IDs of the \ac{PR} with the commit IDs of the repository itself. If the \ac{PR} contains commit IDs that are also present in the repository itself, the PR can be considered merged. If they are not included, the \ac{PR} can be considered rejected \cite{Vasilescu:2015:GTD:2702123.2702549}..
-%\citeauthor{Vasilescu:2015:GTD:2702123.2702549} showed that project teams with increased gender diversity perform better than those being entirely male, however women are underrepresented in \ac{OSS} teams. It would therefore be rational for teams to recruit those rare female Github users to improve their productivity.
+%\citeauthor{Vasilescu:2015:GTD:2702123.2702549} showed that project teams with increased gender diversity perform better than those being entirely male, however women are underrepresented in \ac{OSS} teams. It would therefore be rational for teams to recruit those rare female GitHub users to improve their productivity.
 
-%\emph{Are the evaluations of contributions by members on Github influenced by perceived gender }
+%\emph{Are the evaluations of contributions by members on GitHub influenced by perceived gender }
 
 %snippet
 %The result of either a positive of negative influence of gender on the evaluation decision as well as the tendency for users to follow or star one gender more frequently than another can lead to
@@ -109,7 +109,7 @@ The structure of the paper is as follows: First, some background on gender inequ
 %\begin{lstlisting}
 %//remove all forked repositories
 %db.repos.remove({fork: true}, false)
-%//remove all repositories that have no forks (and therefore no chance for pull requests)
+%//remove all repositories that have no forks (and therefore no chance for \ac{PR}s)
 %db.repos.remove(\{forks: \{: 1\}\}, false)
 %\end{lstlisting}
 
@@ -128,17 +128,22 @@ Gender has been a particular topic in past research as the ratio of male to fema
 The \ac{FLOSSPOLS} from 2006 has clearly described the underrepresentation of women in \ac{OSS}. Studies between 2002 and 2006 reported low one digit percentages of women participating in \ac{OSS} and these numbers have increased slightly in the last years \cite{Vasilescu:2015:GTD:2702123.2702549}. Reasons for these numbers have been summarized in the \ac{FLOSSPOLS} by \citeauthor{flosspols-gender:2005}.
 The authors report cultural and social arrangements such as a 'hacker ethic' and 'individuals as carriers of agency' as strong reasons for this inequality. The culture of \ac{OSS} is being described as code-centric instead of product-centric, leading contributions to be evaluated as less relevant if they are not code-based. The culture revolves around online community inherent concepts such as 'flaming' which 'can be off-putting for newcomers [and] is particularly pronounced in the case of women, who [...] have a shorter history in computing' \cite[p.6]{flosspols-gender:2005}.
 
-\subsubsection{Gender and Tenure diversity in GitHub Teams}
 
-Aside from the ethical reasoning of investigating reasons for gender inequality, \citeauthor{Vasilescu:2015:GTD:2702123.2702549} have studied the influence of gender and tenure diversity on project productivity output in GitHub teams. Diversity is a significant predictor for team productivity. A survey of 4,500 GitHub users showed about half the users were aware of most of their teammates gender, making it the second most salient attribute after programming skills. This "contradicts earlier claims of obscurity of gender in OSS" \cite{Vasilescu:2015:GTD:2702123.2702549}. Furthermore, there are differences in the subjective importance of diversity in teams. Some respondents did not consider diversity to be relevant as it is "more about the contributions to the code than the ‘characteristics’ of the person" while others characterize diversity as a "source of creativity". Overall, gender diversity is positively correlated with project productivity and highly significant. Finally, gender diversity negatively impacts turnover, helping projects to sustain their developer base.
 
 %\subsection{OSS Project culture}
 %\subsubsection{Gender equality fostering initiatives}
 %\subsubsection{Hacker culture}
 
-\subsection{Using Github as a research data set}
+\subsection{Using GitHub as a research data set}
 
 With the changing of the tools used by developer communities in recent years, many older research used websites such as SourceForge or StackOverflow as their sources of data for empirical research \cite{vasilescu:2012:6542459,doi:10.1287/mnsc.1060.0550}. Newer research has moved towards GitHub as it is now the biggest source for publicly available software projects \cite{Vasilescu:2015:GTD:2702123.2702549}.
+
+\subsubsection{Gender and Tenure diversity in GitHub Teams}
+
+According to \citeauthor{Vasilescu:2015:GTD:2702123.2702549}, diversity is a significant predictor for team productivity. A survey of 4,500 GitHub users showed about half the users were aware of most of their teammates gender, making it the second most salient attribute after programming skills. This "contradicts earlier claims of obscurity of gender in OSS". Furthermore, there are differences in the subjective importance of diversity in teams. Some respondents did not consider diversity to be relevant as it is "more about the contributions to the code than the ‘characteristics’ of the person" while others characterize diversity as a "source of creativity". Overall, gender diversity is positively correlated with project productivity and highly significant. Finally, gender diversity negatively impacts turnover, helping projects to sustain their developer base  \cite{Vasilescu:2015:GTD:2702123.2702549}.
+
+\subsubsection{Promises and perils of mining Git(Hub)}
+
 
 \citeauthor{perils-ms-research:2009} and later \citeauthor{perils-github:2015} have analyzed the data available on git based projects and GitHub \ac{API} data to define a number of guidelines for researchers when approaching these types of data. While the research by \citeauthor{perils-ms-research:2009} focused on Git, the underlying versioning system of GitHub, \citeauthor{perils-github:2015} focused on GitHub specifically. The perils defined should be taken into account when analyzing GitHub based data and are therefore listed below:
 
@@ -148,9 +153,9 @@ With the changing of the tools used by developer communities in recent years, ma
 	\item  Most projects are inactive
 	\item  A large portion of repositories are not for software development
 	\item  Two thirds of projects (71.6\% of repositories) are personal
-	\item  Only a fraction of projects use pull requests. And of those that use them, their use is very skewed
+	\item  Only a fraction of projects use \ac{PR}s. And of those that use them, their use is very skewed
 	\item  If the commits in a pull-request are reworked (in response to comments) GitHub records only the commits that are the result of the peer-review, not the original commits
-	\item  Most pull requests appear as non-merged even if they are actually merged
+	\item  Most \ac{PR}s appear as non-merged even if they are actually merged
 	\item  Many active projects do not conduct all their software development in GitHub
 \end{enumerate}
 
@@ -179,22 +184,22 @@ This work leans on the work of \citeauthor{Tsay:2014:IST:2568225.2568315} who an
 
 \section{Methods and Data}
 
-To determine project level differences, three subtasks can be identified that need to be completed for the question to be answered adequately. Acquiring the data, preparing it and analyzing it. To retrieve and prepare the data, a NodeJS tool has been written that combines data from GHTorrent as well as using the Github \ac{API} to acquire all necessary data. All data was locally stored in a NoSQL Mongo database and later transferred to \ac{csv} files that could easily be imported to Microsoft Excel for the final statistical calculations and validations.
+To determine project level differences, three subtasks can be identified that need to be completed for the question to be answered adequately. Acquiring the data, preparing it and analyzing it. To retrieve and prepare the data, a NodeJS tool has been written that combines data from GHTorrent as well as using the GitHub \ac{API} to acquire all necessary data. All data was locally stored in a NoSQL Mongo database and later transferred to \ac{csv} files that could easily be imported to Microsoft Excel for the final statistical calculations and validations.
 
 \subsection{Data acquisition}
 
-Fetching the data included first fetching the \ac{PR}s for each repository. This was performed using the Github REST \ac{API}, a public interface for programs and applications to interact with Github. Each batch of \ac{PR}s was then processed and placed into a queue which processed the \ac{PR}s one at a time. For each \ac{PR}, the GitHub user that created it was queried from the GHTorrent database and cached locally since many \ac{PR}s were created by similar users. The entire software to collect, analyze and store this data was written in NodeJS, a \ac{JS} based runtime environment that allows for easy handling of many parallel web requests as well as handling \ac{JSON} documents easily. Both underlying database as well as the GitHub \ac{API} consume and produce \ac{JSON} documents and as such, a \ac{JS} based technology was reasonable.
+Fetching the data included first fetching the \ac{PR}s for each repository. This was performed using the GitHub REST \ac{API}, a public interface for programs and applications to interact with GitHub. Each batch of \ac{PR}s was then processed and placed into a queue which processed the \ac{PR}s one at a time. For each \ac{PR}, the GitHub user that created it was queried from the GHTorrent database and cached locally since many \ac{PR}s were created by similar users. The entire software to collect, analyze and store this data was written in NodeJS, a \ac{JS} based runtime environment that allows for easy handling of many parallel web requests as well as handling \ac{JSON} documents easily. Both underlying database as well as the GitHub \ac{API} consume and produce \ac{JSON} documents and as such, a \ac{JS} based technology was reasonable.
 
-\subsubsection{GHTorrent data set}
+\subsection{GHTorrent data set}
 
-\citeauthor{Gousi13} created the GHTorrent project. It watches the event stream of Github and stores everything in two separate databases, a relational database and a document based database, namely a MongoDB database. Researchers can get access to these databases by donating a Github \ac{API} key and perform queries which are more versatile than the Github \ac{API} itself. It also allows for a higher number of queries per hour, which GitHub limits to 5000 every 60 minutes. This allowed for a much quicker determination of the genders as a request was required for each user profile and over 40,000 users were involved in the analyzed \ac{PR}s.
+\citeauthor{Gousi13} created the GHTorrent project. It watches the event stream of GitHub and stores everything in two separate databases, a relational database and a document based database, namely a MongoDB database. Researchers can get access to these databases by donating a GitHub \ac{API} key and perform queries which are more versatile than the GitHub \ac{API} itself. It also allows for a higher number of queries per hour, which GitHub limits to 5000 every 60 minutes. This allowed for a much quicker determination of the genders as a request was required for each user profile and over 40,000 users were involved in the analyzed \ac{PR}s.
 
 
 \subsection{Determining Gender}
 After the necessary data was collected the users profile was used to determine the gender. For each user a gender inference was attempted from their login name, their email address and their full name. Not every user has all three attributes added to their profile. 74\% of all \ac{PR}s were created by users with a full name added to their profile, allowing for a much higher success rate in inferring gender from profiles than by simply using the login name as was done in previous analyses.
-%First, the data needs to be prepared and proxy data is required. Since members of Github don't directly indicate their gender, it needs to be derived from names, usernames or email addresses.
+%First, the data needs to be prepared and proxy data is required. Since members of GitHub don't directly indicate their gender, it needs to be derived from names, usernames or email addresses.
 \subsubsection{Gendercomputer}
-To infer the gender, the \lstinline|genderComputer| by \citeauthor{vasilescu:2012:6542459} was used. This algorithm uses several heuristics such as the origin/country of the user as well as common name patterns and ultimately a name-gender dictionary to infer the gender from a given user. It has a reported success rate of about 32\% \cite{Vasilescu:2015:GTD:2702123.2702549} using profile names. In this study a higher success rate was achieved due to the availability of full names which can be added by users on Github and was done by 66\% of the users that were analyzed.
+To infer the gender, the \lstinline|genderComputer| by \citeauthor{vasilescu:2012:6542459} was used. This algorithm uses several heuristics such as the origin/country of the user as well as common name patterns and ultimately a name-gender dictionary to infer the gender from a given user. It has a reported success rate of about 32\% \cite{Vasilescu:2015:GTD:2702123.2702549} using profile names. In this study a higher success rate was achieved due to the availability of full names which can be added by users on GitHub and was done by 66\% of the users that were analyzed.
 
 \subsubsection{Social network profile matching}
 \citeauthor{genderdiff:2016} suggested an additional external verification of gender through the consultation of social network \ac{API}s such as Google+ to determine gender of those users that are not identifiable through the previous step.
@@ -202,7 +207,7 @@ This work only used the \lstinline|genderComputer| tool as it is simpler to user
 
 \subsection{Determining \ac{PR} acceptance}
 
-To ensure higher precision of the merged status \citeauthor{Gousios:2014:ESP:2568225.2568260} suggest a manual approach for determining the ultimate merging decision for each merge. This approach ensures that all merged \ac{PR}s are captured. This is due to the setup of Github, allowing for pull requests to either be merged through Github's own facilities but also through Git, the underlying technology of Github, using its native merge tools. The GitHub \ac{API} provides a flag "merged\_at" flag which indicated those \ac{PR}s that have been merged through the GitHub UI. Since the UI transfers information about gender more easily through profile pictures and linked profiles than a command line based tool, those \ac{PR}s are actually of higher interest for this study.
+To ensure higher precision of the merged status \citeauthor{Gousios:2014:ESP:2568225.2568260} suggest a manual approach for determining the ultimate merging decision for each merge. This approach ensures that all merged \ac{PR}s are captured. This is due to the setup of GitHub, allowing for \ac{PR}s to either be merged through GitHub's own facilities but also through Git, the underlying technology of GitHub, using its native merge tools. The GitHub \ac{API} provides a flag "merged\_at" flag which indicated those \ac{PR}s that have been merged through the GitHub UI. Since the UI transfers information about gender more easily through profile pictures and linked profiles than a command line based tool, those \ac{PR}s are actually of higher interest for this study.
 To rate the acceptance of a contribution, we therefore consider a merged \ac{PR} that has been flagged so by the GitHub systems to be an accepted contribution and a closed but not merged \ac{PR} to be a rejected contribution.
 
 \begin{figure}
@@ -243,7 +248,7 @@ After the data preparation, the analysis of the data can be performed. To analyz
 % section data_processing (end)
 
 %\begin{enumerate}
-%	\item iterate over pull requests
+%	\item iterate over \ac{PR}s
 %	\item for each: determine if accepted / rejected
 %\end{enumerate}
 
@@ -284,7 +289,7 @@ Using the gender linked \ac{PR}s and user profiles, summary statistics were crea
 	\end{tabular}
 \end{table}
 
-To analyze the results, the chi-squared test for statistical significance was used. This test offers the ability to determine correlation between two variables  \cite[p.102ff.]{chi2016springer}. In the study the correlation between the expected number of declined or merged pull requests for each gender and the actual number was to be determined.
+To analyze the results, the chi-squared test for statistical significance was used. This test offers the ability to determine correlation between two variables  \cite[p.102ff.]{chi2016springer}. In the study the correlation between the expected number of declined or merged \ac{PR}s for each gender and the actual number was to be determined.
 
 To evaluate correlation and calculate statistical significance, the chi-squared pearson test requires the calculation of a test statistic $ \chi^2 $ which is then compared to a chi-squared probability of a defined probability barrier (0.005 in this study). The formula for calculating the test statistic is visible in Equation~\ref{equation:statistic}.
 
@@ -366,11 +371,19 @@ The quantitative results of the gender bias on GitHub have shown an interesting 
 
 This leads to the conclusion that the overall bias observed in previous research includes some examples of projects which tend to have a rather strong bias towards male contribution acceptance. Although the work of \citeauthor{Vasilescu:2015:GTD:2702123.2702549} regarding gender and tenure diversity and project success is hardly applicable to the 100 most successful projects on GitHub, the results still leave room for interpretation. The projects listed in Table~\ref{table:pearsonoutliers} all, with the previously described exception of Ghost, show strong biases towards male contributions.
 
+An interesting development can be observed between the two projects angular.js and angular, the latter being the second version of the first one. This allows for a coincidental observation of a temporal change of bias in a community. $ \rho $ has changed from $ -0.074 $ to $0.008$, effectively eliminating the correlation between gender and merge decision.
 
+\section{Limitations and further research}
+The research method introduces a few limitations. Those threats to validity originating from performing empirical research on Git repositories \cite{perils-ms-research:2009} or specifically GitHub data \cite{perils-github:2015} has been considered in the research method and its implications were discussed.
 
-Code of Conduct? Moment X Node Y jquery X angular.js Y angular Y Ghost X
+However, this paper has not specifically reprocessed all \ac{PR}s to identify all merges as such but rather relied on the GitHub \ac{API}s data. This might lead to a lower number of merged \ac{PR}s as are actually correct. The results also rely on the results of the \lstinline|genderComputer| regarding the members gender. Some projects could exhibit a strong bias due to very active members creating large amounts of \ac{PR}s whos gender has been wrongly classified. A manual control of the three most active contributors of each of the 18 projects exhibiting significant bias however has not revealed such a case.
+
+Lastly, the study has investigated simply the correlation between gender and merge rate, it does not infer the cause of the \ac{PR} merge decision outcome to be the gender. The literature does however suggest the average female contribution to be of better quality than that of a male possibly due to the survivorship bias observed with female software developers \cite{genderdiff:2016}.
+
 
 \section{Conclusion}\label{Conclusion}
+
+The observed results of overall bias with some outliers towards more significant bias against women are logical, as they describe a similar picture as \cite{genderdiff:2016}, enriching these results with a higher precision on a project level and showing outliers on this level of detail. Further qualitative research should now be able to investigate a small number of specific projects and determine why they are more biased than others and compare the results with those that do not exhibit bias, such as the "rails" and "kubernetes" projects. This work therefore pinpoints a small number of projects that seem to most probably hold revelations about what influences gender bias in \ac{OSS}. Best practices from these projects could help to slowly transform many other sociometric superstar projects into purely meritocratic communities, which by the laws of network theory would then have strong effects on many smaller projects. The goal of a purely bias free community has both ethical and economical motivations and as such should be pursued further by the community as a whole.
 
 
 
