getting ready for submitting, maybe getting some feedback from d4d

--- a/header.tex
+++ b/header.tex
@@ -3,6 +3,7 @@
 %\linespread{1.5}
 
 %\documentclass[12pt]{article}
+\usepackage[monochrome]{color}
 
 %bibliography style
 \usepackage[numbers]{natbib}
